[project]
name = "system-log-anomaly-detector"
version = "0.1.0"
description = "System log anomaly detection using Langchain and Gemini LLM"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0"
]
